--- a/style.css
+++ b/style.css
@@ -3,5 +3,5 @@ body {
     font-size: 18px;
 }
 header, footer {background-color: cornflowerblue;}
-.site-title {color:midnightblue}
+.site-title {color:rgb(112, 25, 68)}
 #my-image {box-shadow: 0px 0px 2px 1px black;}
