--- a/style.css
+++ b/style.css
@@ -5,3 +5,14 @@ body {
 header, footer {background-color: cornflowerblue;}
 .site-title {color:rgb(112, 25, 68)}
 #my-image {box-shadow: 0px 0px 2px 1px black;}
+ul.a {list-style-type: square;}
+ul.a > odd {background-color: cornflowerblue;}
+nav > a {
+    background-color:cadetblue;
+    border:rgb(112, 25, 68);
+    text-decoration: none;
+ }
+a:link {color:salmon;}
+a:visited {color:salmon;}
+a:hover {color:steelblue;}
+a:active {color:turquoise;}
